// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/bubble/demo/animation.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      非流式数据 / Non-streaming data:
    </span>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        load data-1
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        load data-2
      </span>
    </button>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      动画效果 / Animation effects:
    </span>
    <div
      class="ant-radio-group ant-radio-group-outline css-var-_R_0_ ant-radio-css-var"
      role="radiogroup"
    >
      <label
        class="ant-radio-wrapper ant-radio-wrapper-checked css-var-_R_0_ ant-radio-css-var"
      >
        <span
          class="ant-radio ant-wave-target ant-radio-checked"
        >
          <input
            checked=""
            class="ant-radio-input"
            name="test-id"
            type="radio"
            value="fade-in"
          />
        </span>
        <span
          class="ant-radio-label"
        >
          fade-in
        </span>
      </label>
      <label
        class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
      >
        <span
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            name="test-id"
            type="radio"
            value="typing"
          />
        </span>
        <span
          class="ant-radio-label"
        >
          typing
        </span>
      </label>
      <label
        class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
      >
        <span
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            name="test-id"
            type="radio"
            value="custom-typing"
          />
        </span>
        <span
          class="ant-radio-label"
        >
          typing with 💖 
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      保留公共前缀 / Preserve common prefix:
    </span>
    <button
      aria-checked="false"
      class="ant-switch css-var-_R_0_"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div
    class="ant-divider css-var-_R_0_ ant-divider-horizontal ant-divider-rail"
    role="separator"
  />
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <div
      class="ant-bubble css-var-_R_1f_ ant-bubble-start ant-bubble-loading"
    >
      <div
        class="ant-bubble-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_1f_ ant-avatar-css-var"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
      </div>
      <span
        class="ant-bubble-dot"
      >
        <i
          class="ant-bubble-dot-item"
        />
        <i
          class="ant-bubble-dot-item"
        />
        <i
          class="ant-bubble-dot-item"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/basic.tsx correctly 1`] = `
<div
  class="ant-bubble css-var-_R_0_ ant-bubble-start"
>
  <div
    class="ant-bubble-avatar"
  >
    <span
      class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
    >
      <span
        aria-label="ant-design"
        class="anticon anticon-ant-design"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="ant-design"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M716.3 313.8c19-18.9 19-49.7 0-68.6l-69.9-69.9.1.1c-18.5-18.5-50.3-50.3-95.3-95.2-21.2-20.7-55.5-20.5-76.5.5L80.9 474.2a53.84 53.84 0 000 76.4L474.6 944a54.14 54.14 0 0076.5 0l165.1-165c19-18.9 19-49.7 0-68.6a48.7 48.7 0 00-68.7 0l-125 125.2c-5.2 5.2-13.3 5.2-18.5 0L189.5 521.4c-5.2-5.2-5.2-13.3 0-18.5l314.4-314.2c.4-.4.9-.7 1.3-1.1 5.2-4.1 12.4-3.7 17.2 1.1l125.2 125.1c19 19 49.8 19 68.7 0zM408.6 514.4a106.3 106.2 0 10212.6 0 106.3 106.2 0 10-212.6 0zm536.2-38.6L821.9 353.5c-19-18.9-49.8-18.9-68.7.1a48.4 48.4 0 000 68.6l83 82.9c5.2 5.2 5.2 13.3 0 18.5l-81.8 81.7a48.4 48.4 0 000 68.6 48.7 48.7 0 0068.7 0l121.8-121.7a53.93 53.93 0 00-.1-76.4z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-bubble-body"
  >
    <div
      class="ant-bubble-header"
    >
      <h5>
        Ant Design X
      </h5>
    </div>
    <div
      class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
    >
      <div
        class="ant-bubble-fade-in"
      />
    </div>
    <div
      class="ant-bubble-footer ant-bubble-footer-start"
    >
      <div
        class="ant-actions css-var-_R_0_"
      >
        <div
          class="ant-actions-list ant-actions-variant-borderless"
        >
          <span
            class="ant-actions-copy ant-actions ant-actions-item css-var-_R_0_ css-var-_R_0_"
          >
            <span
              class="ant-actions-copy-actions"
            >
              <button
                aria-label="Copy"
                class="ant-actions-copy-copy ant-actions-copy-copy-icon-only"
                type="button"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <div
            class="ant-actions-item"
          >
            <div
              class="ant-actions-icon"
            >
              <span
                aria-label="redo"
                class="anticon anticon-redo"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="redo"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/custom-content.tsx correctly 1`] = `
Array [
  <link
    as="image"
    href="https://mdn.alipayobjects.com/huamei_iwk9zp/afts/img/A*eco6RrQhxbMAAAAAAAAAAAAADgCCAQ/original"
    rel="preload"
  />,
  <div
    style="height:100px"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default"
        >
          <div
            class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-middle"
          >
            <div
              class="ant-image css-var-_R_0_ ant-image-css-var"
              role="button"
              style="height:50px"
              tabindex="0"
            >
              <img
                class="ant-image-img"
                height="50"
                src="https://mdn.alipayobjects.com/huamei_iwk9zp/afts/img/A*eco6RrQhxbMAAAAAAAAAAAAADgCCAQ/original"
                style="height:50px"
              />
              <div
                class="ant-image-cover ant-image-cover-center"
              />
            </div>
            <span
              style="font-size:18px;font-weight:bold"
            >
              Ant Design X
            </span>
          </div>
        </div>
        <div
          class="ant-bubble-footer ant-bubble-footer-start"
        >
          <button
            class="ant-btn css-var-_R_0_ ant-btn-text ant-btn-color-default ant-btn-variant-text"
            type="button"
          >
            <span>
              Click Me
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/bubble/demo/divider.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-vertical"
  style="gap:16px"
>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
      >
        message 1
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble ant-bubble-divider css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-borderless"
      >
        <div
          class="ant-divider css-var-_R_0_ ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
          role="separator"
        >
          <div
            class="ant-divider-rail ant-divider-rail-start"
          />
          <span
            class="ant-divider-inner-text"
          >
            Solid
          </span>
          <div
            class="ant-divider-rail ant-divider-rail-end"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-end"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
      >
        message 2
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble ant-bubble-divider css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-borderless"
      >
        <div
          class="ant-divider css-var-_R_0_ ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-dashed"
          role="separator"
        >
          <div
            class="ant-divider-rail ant-divider-rail-start"
          />
          <span
            class="ant-divider-inner-text"
          >
            Dashed
          </span>
          <div
            class="ant-divider-rail ant-divider-rail-end"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
      >
        message 3
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble ant-bubble-divider css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-borderless"
      >
        <div
          class="ant-divider css-var-_R_0_ ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-dotted"
          role="separator"
        >
          <div
            class="ant-divider-rail ant-divider-rail-start"
          />
          <span
            class="ant-divider-inner-text"
          >
            Dotted
          </span>
          <div
            class="ant-divider-rail ant-divider-rail-end"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-end"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
      >
        message 4
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble ant-bubble-divider css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-borderless"
      >
        <div
          class="ant-divider css-var-_R_0_ ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-plain"
          role="separator"
        >
          <div
            class="ant-divider-rail ant-divider-rail-start"
          />
          <span
            class="ant-divider-inner-text"
          >
            Plain Text
          </span>
          <div
            class="ant-divider-rail ant-divider-rail-end"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
      >
        message 5
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/editable.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
  style="min-height:200px"
>
  <div
    class="ant-flex css-var-_R_0_"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
        >
          editable bubble 1
        </div>
        <div
          class="ant-bubble-footer ant-bubble-footer-start"
        >
          <div
            class="ant-actions css-var-_R_0_"
          >
            <div
              class="ant-actions-list ant-actions-variant-borderless"
            >
              <div
                class="ant-actions-item"
              >
                <div
                  class="ant-actions-icon"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-end"
      style="width:100%"
    >
      <div
        class="ant-bubble-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
        >
          editable bubble 2
        </div>
        <div
          class="ant-bubble-footer ant-bubble-footer-end"
        >
          <div
            class="ant-actions css-var-_R_0_"
          >
            <div
              class="ant-actions-list ant-actions-variant-borderless"
            >
              <div
                class="ant-actions-item"
              >
                <div
                  class="ant-actions-icon"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/footer.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-header"
          >
            footer
          </div>
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            outer footer
          </div>
          <div
            class="ant-bubble-footer ant-bubble-footer-start"
          >
            <div
              class="ant-actions css-var-_R_0_"
            >
              <div
                class="ant-actions-list ant-actions-variant-borderless"
              >
                <div
                  class="ant-actions-item"
                >
                  <div
                    class="ant-actions-icon"
                  >
                    <span
                      aria-label="redo"
                      class="anticon anticon-redo"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="redo"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="ant-actions-item"
                >
                  <div
                    class="ant-actions-icon"
                  >
                    <span
                      aria-label="copy"
                      class="anticon anticon-copy"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="copy"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-header"
          >
            footer
          </div>
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            <div
              class="ant-bubble-content-with-footer"
            >
              inner footer
            </div>
            <div
              class="ant-bubble-footer ant-bubble-footer-end"
            >
              <div
                class="ant-actions css-var-_R_0_"
              >
                <div
                  class="ant-actions-list ant-actions-variant-borderless"
                >
                  <div
                    class="ant-actions-item"
                  >
                    <div
                      class="ant-actions-icon"
                    >
                      <span
                        aria-label="redo"
                        class="anticon anticon-redo"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="redo"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-actions-item"
                  >
                    <div
                      class="ant-actions-icon"
                    >
                      <span
                        aria-label="copy"
                        class="anticon anticon-copy"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="copy"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-header"
          >
            footer
          </div>
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            outer footer and align right
          </div>
          <div
            class="ant-bubble-footer ant-bubble-footer-end"
          >
            <div
              class="ant-actions css-var-_R_0_"
            >
              <div
                class="ant-actions-list ant-actions-variant-borderless"
              >
                <div
                  class="ant-actions-item"
                >
                  <div
                    class="ant-actions-icon"
                  >
                    <span
                      aria-label="redo"
                      class="anticon anticon-redo"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="redo"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="ant-actions-item"
                >
                  <div
                    class="ant-actions-icon"
                  >
                    <span
                      aria-label="copy"
                      class="anticon anticon-copy"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="copy"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-header"
          >
            footer
          </div>
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            <div
              class="ant-bubble-content-with-footer"
            >
              inner footer and align left
            </div>
            <div
              class="ant-bubble-footer ant-bubble-footer-start"
            >
              <div
                class="ant-actions css-var-_R_0_"
              >
                <div
                  class="ant-actions-list ant-actions-variant-borderless"
                >
                  <div
                    class="ant-actions-item"
                  >
                    <div
                      class="ant-actions-icon"
                    >
                      <span
                        aria-label="redo"
                        class="anticon anticon-redo"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="redo"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-actions-item"
                  >
                    <div
                      class="ant-actions-icon"
                    >
                      <span
                        aria-label="copy"
                        class="anticon anticon-copy"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="copy"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/header.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-header"
          >
            header
          </div>
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            align left
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-header"
          >
            header
          </div>
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            align right
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/list.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-vertical"
  style="height:720px;gap:20px"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-_R_0_"
    >
      <div
        class="ant-space-item"
      >
        <button
          aria-checked="true"
          class="ant-switch css-var-_R_0_ ant-switch-checked"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          />
          <span
            class="ant-switch-inner"
          >
            <span
              class="ant-switch-inner-checked"
            />
            <span
              class="ant-switch-inner-unchecked"
            />
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span>
          启用 autoScroll / enabled autoScroll
        </span>
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-_R_0_"
    >
      <div
        class="ant-space-item"
      >
        <button
          aria-checked="true"
          class="ant-switch css-var-_R_0_ ant-switch-checked"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          />
          <span
            class="ant-switch-inner"
          >
            <span
              class="ant-switch-inner-checked"
            />
            <span
              class="ant-switch-inner-unchecked"
            />
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span>
          定位到新气泡 / locate to new bubble
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <button
      class="ant-btn css-var-_R_0_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        Add Bubble
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Add Markdown
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Add Divider
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Add System
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Add To Top
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Add With Ref
      </span>
    </button>
  </div>
  <div
    style="display:flex;flex:1;min-height:0"
  >
    <div
      class="ant-bubble-list css-var-_R_0_"
      style="height:620px"
    >
      <div
        class="ant-bubble-list-scroll-box ant-bubble-list-autoscroll"
      >
        <div
          class="ant-bubble-list-scroll-content"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/list-extra.tsx correctly 1`] = `
<div
  class="ant-bubble-list css-var-_R_0_"
  style="height:500px"
>
  <div
    class="ant-bubble-list-scroll-box ant-bubble-list-autoscroll"
  >
    <div
      class="ant-bubble-list-scroll-content"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-success"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-borderless ant-bubble-content-success ant-bubble-content-string"
          >
            Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. 
          </div>
          <div
            class="ant-bubble-footer ant-bubble-footer-start"
          >
            <div
              class="ant-actions css-var-_R_0_"
            >
              <div
                class="ant-actions-list ant-actions-variant-borderless"
              >
                <span
                  class="ant-actions-copy ant-actions ant-actions-item css-var-_R_0_ css-var-_R_0_"
                >
                  <span
                    class="ant-actions-copy-actions"
                  >
                    <button
                      aria-label="Copy"
                      class="ant-actions-copy-copy ant-actions-copy-copy-icon-only"
                      type="button"
                    >
                      <span
                        aria-label="copy"
                        class="anticon anticon-copy"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="copy"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <div
                  class="ant-actions ant-actions-feedback css-var-_R_0_ ant-actions-list"
                >
                  <span
                    class="ant-actions-feedback-item ant-actions-item ant-actions-feedback-item-like ant-actions-feedback-item-like-active"
                    style="color:#f759ab"
                  >
                    <span
                      aria-label="like"
                      class="anticon anticon-like"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="like"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 00-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 00471 99.9c-52 0-98 35-111.8 85.1l-85.9 311h-.3v428h472.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM112 528v364c0 17.7 14.3 32 32 32h65V496h-65c-17.7 0-32 14.3-32 32z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            Mock user content.
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-success"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-borderless ant-bubble-content-success ant-bubble-content-string"
          >
            Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. 
          </div>
          <div
            class="ant-bubble-footer ant-bubble-footer-start"
          >
            <div
              class="ant-actions css-var-_R_0_"
            >
              <div
                class="ant-actions-list ant-actions-variant-borderless"
              >
                <span
                  class="ant-actions-copy ant-actions ant-actions-item css-var-_R_0_ css-var-_R_0_"
                >
                  <span
                    class="ant-actions-copy-actions"
                  >
                    <button
                      aria-label="Copy"
                      class="ant-actions-copy-copy ant-actions-copy-copy-icon-only"
                      type="button"
                    >
                      <span
                        aria-label="copy"
                        class="anticon anticon-copy"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="copy"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <div
                  class="ant-actions ant-actions-feedback css-var-_R_0_ ant-actions-list"
                >
                  <span
                    class="ant-actions-feedback-item ant-actions-item ant-actions-feedback-item-dislike ant-actions-feedback-item-dislike-active"
                  >
                    <span
                      aria-label="dislike"
                      class="anticon anticon-dislike"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="dislike"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M885.9 490.3c3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-51.6-30.7-98.1-78.3-118.4a66.1 66.1 0 00-26.5-5.4H273v428h.3l85.8 310.8C372.9 889 418.9 924 470.9 924c29.7 0 57.4-11.8 77.9-33.4 20.5-21.5 31-49.7 29.5-79.4l-6-122.9h239.9c12.1 0 23.9-3.2 34.3-9.3 40.4-23.5 65.5-66.1 65.5-111 0-28.3-9.3-55.5-26.1-77.7zM112 132v364c0 17.7 14.3 32 32 32h65V100h-65c-17.7 0-32 14.3-32 32z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            Mock user content.
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-success"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-borderless ant-bubble-content-success ant-bubble-content-string"
          >
            Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. 
          </div>
          <div
            class="ant-bubble-footer ant-bubble-footer-start"
          >
            <div
              class="ant-actions css-var-_R_0_"
            >
              <div
                class="ant-actions-list ant-actions-variant-borderless"
              >
                <span
                  class="ant-actions-copy ant-actions ant-actions-item css-var-_R_0_ css-var-_R_0_"
                >
                  <span
                    class="ant-actions-copy-actions"
                  >
                    <button
                      aria-label="Copy"
                      class="ant-actions-copy-copy ant-actions-copy-copy-icon-only"
                      type="button"
                    >
                      <span
                        aria-label="copy"
                        class="anticon anticon-copy"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="copy"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <div
                  class="ant-actions ant-actions-feedback css-var-_R_0_ ant-actions-list"
                >
                  <span
                    class="ant-actions-feedback-item ant-actions-item ant-actions-feedback-item-dislike ant-actions-feedback-item-dislike-active"
                  >
                    <span
                      aria-label="dislike"
                      class="anticon anticon-dislike"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="dislike"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M885.9 490.3c3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-51.6-30.7-98.1-78.3-118.4a66.1 66.1 0 00-26.5-5.4H273v428h.3l85.8 310.8C372.9 889 418.9 924 470.9 924c29.7 0 57.4-11.8 77.9-33.4 20.5-21.5 31-49.7 29.5-79.4l-6-122.9h239.9c12.1 0 23.9-3.2 34.3-9.3 40.4-23.5 65.5-66.1 65.5-111 0-28.3-9.3-55.5-26.1-77.7zM112 132v364c0 17.7 14.3 32 32 32h65V100h-65c-17.7 0-32 14.3-32 32z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            Mock user content.
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-success"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-borderless ant-bubble-content-success ant-bubble-content-string"
          >
            Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. Mock welcome content. 
          </div>
          <div
            class="ant-bubble-footer ant-bubble-footer-start"
          >
            <div
              class="ant-actions css-var-_R_0_"
            >
              <div
                class="ant-actions-list ant-actions-variant-borderless"
              >
                <span
                  class="ant-actions-copy ant-actions ant-actions-item css-var-_R_0_ css-var-_R_0_"
                >
                  <span
                    class="ant-actions-copy-actions"
                  >
                    <button
                      aria-label="Copy"
                      class="ant-actions-copy-copy ant-actions-copy-copy-icon-only"
                      type="button"
                    >
                      <span
                        aria-label="copy"
                        class="anticon anticon-copy"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="copy"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <div
                  class="ant-actions ant-actions-feedback css-var-_R_0_ ant-actions-list"
                >
                  <span
                    class="ant-actions-feedback-item ant-actions-item ant-actions-feedback-item-like ant-actions-feedback-item-like-active"
                    style="color:#f759ab"
                  >
                    <span
                      aria-label="like"
                      class="anticon anticon-like"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="like"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 00-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 00471 99.9c-52 0-98 35-111.8 85.1l-85.9 311h-.3v428h472.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM112 528v364c0 17.7 14.3 32 32 32h65V496h-65c-17.7 0-32 14.3-32 32z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            Mock user content.
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-loading"
      >
        <div
          class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-section css-var-_R_0_"
          >
            <span
              class="ant-spin-dot-holder"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </span>
          </div>
          Custom loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/list-scroll.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
  style="height:720px"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <button
      class="ant-btn css-var-_R_0_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        Add Long Bubble
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Scroll To Top
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Scroll To Bottom smooth
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Scroll To Bottom instant
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Scroll To Random
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Scroll To Second Bubble
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Scroll To Last Bubble
      </span>
    </button>
  </div>
  <div
    style="display:flex;flex:1;min-height:0"
  >
    <div
      class="ant-bubble-list css-var-_R_0_"
    >
      <div
        class="ant-bubble-list-scroll-box ant-bubble-list-autoscroll"
      >
        <div
          class="ant-bubble-list-scroll-content"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/loading.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-large ant-flex-vertical"
>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-loading"
  >
    <span
      class="ant-bubble-dot"
    >
      <i
        class="ant-bubble-dot-item"
      />
      <i
        class="ant-bubble-dot-item"
      />
      <i
        class="ant-bubble-dot-item"
      />
    </span>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-large"
  >
    Loading state:
    <button
      aria-checked="true"
      class="ant-switch css-var-_R_0_ ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/bubble/demo/markdown.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-vertical"
  style="height:150px;gap:16px"
>
  <div
    class="ant-flex css-var-_R_0_"
  >
    <button
      class="ant-btn css-var-_R_0_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        rerender
      </span>
    </button>
  </div>
  <div
    class="ant-flex css-var-_R_0_"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default"
        >
          <article
            class="ant-typography css-var-_R_0_"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/semantic-list-custom.tsx correctly 1`] = `
<div
  class="ant-bubble-list css-var-_R_0_"
  style="height:500px"
>
  <div
    class="ant-bubble-list-scroll-box ant-bubble-list-autoscroll"
  >
    <div
      class="ant-bubble-list-scroll-content"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            <div
              class=""
            />
          </div>
          <div
            class="ant-bubble-footer ant-bubble-footer-start"
          >
            <div
              class="ant-flex css-var-_R_0_"
            >
              <button
                class="ant-btn css-var-_R_0_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                style="margin-inline-end:auto"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="sync"
                    class="anticon anticon-sync"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="sync"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <button
                class="ant-btn css-var-_R_0_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="smile"
                    class="anticon anticon-smile"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="smile"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <button
                class="ant-btn css-var-_R_0_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="frown"
                    class="anticon anticon-frown"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="frown"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM512 533c-85.5 0-155.6 67.3-160 151.6a8 8 0 008 8.4h48.1c4.2 0 7.8-3.2 8.1-7.4C420 636.1 461.5 597 512 597s92.1 39.1 95.8 88.6c.3 4.2 3.9 7.4 8.1 7.4H664a8 8 0 008-8.4C667.6 600.3 597.5 533 512 533z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            Mock user content.
          </div>
        </div>
      </div>
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-loading"
      >
        <div
          class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-section css-var-_R_0_"
          >
            <span
              class="ant-spin-dot-holder"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </span>
          </div>
          Custom loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/sider-and-placement.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-start"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            align left
          </div>
        </div>
        <div
          class="ant-bubble-extra"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      style="width:100%"
    >
      <div
        class="ant-bubble css-var-_R_0_ ant-bubble-end"
      >
        <div
          class="ant-bubble-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-bubble-body"
        >
          <div
            class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
          >
            align right
          </div>
        </div>
        <div
          class="ant-bubble-extra"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/stream.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      流式数据 / steaming data:
    </span>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        load slowly
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        load quickly
      </span>
    </button>
    <button
      class="ant-btn css-var-_R_0_ ant-btn-link ant-btn-color-link ant-btn-variant-link"
      type="button"
    >
      <span>
        clear
      </span>
    </button>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      强制关闭流式标志 / Force close the streaming flag: 
    </span>
    <button
      aria-checked="false"
      class="ant-switch css-var-_R_0_"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      启用动画 / Enable animation:
    </span>
    <button
      aria-checked="false"
      class="ant-switch css-var-_R_0_"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      onTypingComplete 触发次数 / trigger times:
      <!-- -->
      <span
        class="ant-typography ant-typography-danger css-var-_R_0_"
      >
        0
      </span>
    </span>
  </div>
  <div
    class="ant-divider css-var-_R_0_ ant-divider-horizontal ant-divider-rail"
    role="separator"
  />
  <div
    class="ant-flex css-var-_R_0_ ant-flex-align-center ant-flex-gap-small"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start ant-bubble-loading"
    >
      <div
        class="ant-bubble-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-_R_0_ ant-avatar-css-var"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
      </div>
      <span
        class="ant-bubble-dot"
      >
        <i
          class="ant-bubble-dot-item"
        />
        <i
          class="ant-bubble-dot-item"
        />
        <i
          class="ant-bubble-dot-item"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/system.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-vertical"
  style="gap:16px"
>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-system ant-bubble css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-shadow ant-bubble-content-default ant-bubble-content-string"
      >
        Hello, this is a system message
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-system ant-bubble css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-outlined ant-bubble-content-round"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-_R_0_"
        >
          <div
            class="ant-space-item"
          >
            Hello, this is a system message
          </div>
          <div
            class="ant-space-item"
          >
            <a
              class="ant-typography ant-typography-link css-var-_R_0_"
            >
              ok
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-bubble css-var-_R_0_ ant-bubble-system ant-bubble css-var-_R_0_ ant-bubble-start"
  >
    <div
      class="ant-bubble-body"
    >
      <div
        class="ant-bubble-content ant-bubble-content-borderless"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-_R_0_"
        >
          <div
            class="ant-space-item"
          >
            Hello, this is a system message
          </div>
          <div
            class="ant-space-item"
          >
            <a
              class="ant-typography ant-typography-link css-var-_R_0_"
            >
              cancel
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/bubble/demo/variant-and-shape.tsx correctly 1`] = `
<div
  class="ant-flex css-var-_R_0_ ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
        >
          filled - default
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-round ant-bubble-content-string"
        >
          filled - round
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-corner ant-bubble-content-string"
        >
          filled - corner left
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-end"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-corner ant-bubble-content-string"
        >
          filled - corner right
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-outlined ant-bubble-content-default ant-bubble-content-string"
        >
          outlined - default
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-outlined ant-bubble-content-round ant-bubble-content-string"
        >
          outlined - round
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-outlined ant-bubble-content-corner ant-bubble-content-string"
        >
          outlined - corner left
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-end"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-outlined ant-bubble-content-corner ant-bubble-content-string"
        >
          outlined - corner right
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-shadow ant-bubble-content-default ant-bubble-content-string"
        >
          shadow - default
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-shadow ant-bubble-content-round ant-bubble-content-string"
        >
          shadow - round
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-shadow ant-bubble-content-corner ant-bubble-content-string"
        >
          shadow - corner left
        </div>
      </div>
    </div>
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-end"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-shadow ant-bubble-content-corner ant-bubble-content-string"
        >
          shadow - corner right
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-flex css-var-_R_0_ ant-flex-wrap-wrap ant-flex-gap-small"
    style="margin-top:8px"
  >
    <div
      class="ant-bubble css-var-_R_0_ ant-bubble-start"
    >
      <div
        class="ant-bubble-body"
      >
        <div
          class="ant-bubble-content ant-bubble-content-borderless"
        >
          <span>
            borderless bubble
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
